@@ -1210,11 +1210,8 @@ void free_br(
 
   reply_free(&preq->rq_reply);
 
-  if (preq->rq_extend && *preq->rq_extend != 0)    /* this check added for modify array calls */
-    {
+  if (preq->rq_extend) 
       free(preq->rq_extend);
-      preq->rq_extend = NULL;
-    }
 
   switch (preq->rq_type)
     {
