@@ -20,6 +20,12 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix so blcr checkpoint jobs work correctly when put on hold
   b - fixed bug 75 where pbs_server would segfault with a double free when
       calling qalter on a running job.
+  b - made another fix to bug 75. The previous fix only handled the case for 
+      running jobs that were altered. This patch fixes job arrays with running
+      job elements that are altered.
+  e - Changed free_br back to its original form and modifed copy_batchrequest
+      to make a copy of the rq_extend element which will be freed in 
+      free_br.
 
 2.5.1
   b - modified Makefile.in and Makefile.am at root to include contrib/AddPrivileges
